test/domains/sungeun/rect/equals_minus_illegal_2.good
equals_minus_illegal_2.chpl:6: error: subtraction of a rectangular domain and int(64) is currently not supported
