test/domains/sungeun/rect/equals_minus_illegal_2.chpl
config const n = 7;

var D1 = {1..n-1};
writeln(D1);

var D2 = D1 - n;
writeln(D2);

